--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/pugixml"]
 	path = vendor/pugixml
 	url = https://github.com/zeux/pugixml.git
+[submodule "vendor/openvr"]
+	path = vendor/openvr
+	url = https://github.com/ValveSoftware/openvr.git
